--- a/webcontent/photon/leaflet.photon.css
+++ b/webcontent/photon/leaflet.photon.css
@@ -3,6 +3,7 @@ ul.photon-autocomplete {
     background-color: white;
     z-index: 1000;
     box-shadow: 0 4px 9px #999999;
+    display: none;
 }
 .photon-autocomplete li {
     min-height: 40px;
